// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox rendering renders expected elements 1`] = `
<label
  className="CheckBox"
>
  <input
    checked={true}
    className=""
    id="test"
    onChange={[MockFunction]}
    type="checkbox"
  />
  Test
</label>
`;

exports[`CheckBox rendering renders expected elements when clasName is set 1`] = `
<label
  className="CheckBox TestClass"
>
  <input
    checked={true}
    className=""
    id="test"
    onChange={[MockFunction]}
    type="checkbox"
  />
  Test
</label>
`;

exports[`CheckBox rendering renders expected elements when error is true 1`] = `
<label
  className="CheckBox TestClass"
>
  <input
    checked={true}
    className="error"
    id="test"
    onChange={[MockFunction]}
    type="checkbox"
  />
  Test
</label>
`;
